--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ torchaudio
 # librosa
 # AMFM-decompy
 
+# added following
 huggingface_hub
 pyyaml==5.1
- detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
+detectron2 -f https://dl.fbaipublicfiles.com/detectron2/wheels/cu113/torch1.10/index.html
